# myUSDCarbitrage

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  implementation_summary.md  mypy.ini  pyproject.toml  requirements-dev.txt  validate_tests.py
.dev/: Implementation Plan - Claude 4 & Kiro.docx  PostgreSQL_usdc_arbitrage.txt  USDC arbitrage backtesting project.md  data-1751249197981.txt  directory_tree_2025-06-30  directory_tree_2025-07-01
.github/workflows/: ci-cd.yaml
.kiro/specs/usdc-arbitrage-completion/: design.md  requirements.md  tasks.md
.sql/: check_data.sql  database_setup.sql  timescaledb_compression.sql
docs/: SECURITY_IMPLEMENTATION_SUMMARY.md  api_documentation.md  deployment_maintenance.md  system_architecture.md  troubleshooting_guide.md  user_guide.md
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  postgres-deployment.yaml  pvc.yaml  redis-deployment.yaml  secret.yaml  service-mesh.yaml  service.yaml
k8s/overlays/production/: kustomization.yaml  resources-patch.yaml
k8s/overlays/staging/: kustomization.yaml  replicas-patch.yaml
scripts/: automated_backup.py  db_optimization.py  init_auth.py  setup_production.py
src/: README_DATABASE_SETUP.md  download_usdc_data.py  generate_report.py  performance_optimization.py  setup_database.py  validation_report.py
src/api/: api_keys.py  audit_logging.py  data_continuity_dashboard.py  data_downloader.py  data_validation.py  database.py  dependencies.py  encryption.py  gap_alerting.py  gap_detection.py  init_auth.py  main.py  models.py  rate_limiting.py  security.py  versioning.py
src/api/backtesting/: __init__.py  engine.py  metrics.py  optimization.py
src/api/client/: README.md
src/api/client/javascript/: usdc-arbitrage-client.js
src/api/client/python/: usdc_arbitrage_client.py
src/api/routers/: admin.py  api_keys.py  auth.py  backtest.py  centralized_logging.py  data.py  data_export.py  health.py  logging.py  monitoring.py  results.py  strategies.py  versioned_example.py  visualization.py  websocket.py
src/api/security/: __init__.py  jwt.py  rbac.py  service.py  websocket_auth.py
src/api/strategies/: __init__.py  comparison.py  manager.py  routes.py  sample_strategies.py  types.py
src/api/visualization/: __init__.py  performance_visualization.py  portfolio_analytics.py  risk_analysis.py  risk_management.py  strategy_comparison.py
src/models/: isolation_forest.joblib
src/monitoring/: README.md  __init__.py  alerting.py  business_metrics.py  centralized_logging.py  db_query_logging.py  error_categorization.py  health_checks.py  log_aggregation.py  log_analysis.py  log_rotation.py  logging_config.py  metrics_collector.py  performance_profiler.py  reporting.py  scheduler.py  service_recovery.py
src/reporting/: README.md  cli.py  jinja_filters.py  main.py  on_demand_report_generator.py  report_generator.py  reporting.py
src/reporting/routers/: __init__.py  on_demand_reports.py  reporting.py
src/strategies/: simple_arb.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_advanced_data_validator.py  test_api_fuzzing.py  test_api_security_enhancements.py  test_auth_system.py  test_backtesting_engine.py  test_backtesting_metrics.py  test_business_metrics_alerting.py  test_data_validation.py  test_database.py  test_download_usdc_data.py  test_error_tracking_logging.py  test_gap_alerting.py  test_health_monitoring.py  test_jinja_filters.py  test_on_demand_report_generator.py  test_optimization.py  test_performance_load.py  test_performance_load_fixed.py  test_rbac_system.py  test_report_generator.py  test_report_generator_fixed.py  test_routers_backtest.py  test_routers_data.py  test_routers_reporting.py  test_security_edge_cases.py  test_strategies.py  test_strategy_management.py  test_system_integration.py  validate_tests.py
