[project]
name = "myUSDCarbitrage"
version = "0.1.0"
description = "USDC multi-exchange & multi-timeframe arbitrage back testing backend application"
authors = [{ name = "Alexander Jensen", email = "thanotosq@gmail.com" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-dotenv",
    "slowapi",
    "python-multipart",
    "psycopg2-binary",
    "pandas",
    "ccxt>=4.4.91",
    "numpy",
    "schedule",
    "plotly",
    "dotenv>=0.9.9",
    "pytest>=8.4.1",
    "sqlalchemy",
    "pytest-cov>=6.2.1",
    "orjson>=3.10.18",
    "httpx>=0.28.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pdm]
distribution = false

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ['**/*venv/**\*']
