[project]
name = "myUSDCarbitrage"
version = "0.1.0"
description = "USDC multi-exchange & multi-timeframe arbitrage back testing backend application"
authors = [{ name = "Alexander Jensen", email = "thanotosq@gmail.com" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-dotenv",
    "slowapi",
    "python-multipart",
    "psycopg2-binary",
    "pandas",
    "ccxt>=4.4.91",
    "numpy",
    "schedule",
    "plotly",
    "dotenv>=0.9.9",
    "pytest>=8.4.1",
    "sqlalchemy",
    "pytest-cov>=6.2.1",
    "orjson>=3.10.18",
    "httpx>=0.28.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pdm]
distribution = false

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ['**/*venv/**\*']

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable specific rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

# Ignore specific rules
ignore = [
    "E501", # Line too long (handled by formatter)
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore assert statements and other test-specific rules in test files
"tests/*" = [
    "S101",    # Use of assert detected
    "PT019",   # Fixture without value is injected as parameter
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "SLF001",  # Private member accessed
    "ARG001",  # Unused function argument
    "PLR2004", # Magic value used in comparison
    "N806",    # Variable in function should be lowercase
    "FBT003",  # Boolean positional value in function call
    "NPY002",  # Replace legacy numpy random calls
    "UP017",   # Use datetime.UTC alias
    "E402",    # Module level import not at top of file
    "PLC0415", # Import should be at the top-level of a file
    "COM812",  # Trailing comma missing
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
